--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,6 +2,25 @@
 <html>
   <head>
     <title>Evidence Based Academic Writing Assistant</title>
+    <style>
+@media (max-width: 960px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 540px) {
+  html {
+    font-size: 10px;
+  }
+}
+    </style>
   </head>
   <body>
     <div id="app"></div>
