--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,15 @@
 * {
   box-sizing: border-box;
 }
+
+.editor .sentence:hover {
+  background-color: #f5f6ff;
+}
+
+.editor .marker {
+  border-bottom: 2px solid #f299a8;
+}
+
     </style>
   </head>
   <body>
