fix editor paste; add analysis button

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,6 +29,10 @@
   background-color: #f5f6ff;
 }
 
+.editor .sentence.active {
+  background-color: #f5f6ff;
+}
+
 .editor .marker {
   border-bottom: 2px solid #f299a8;
 }
