fetch moves/markers

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,12 +29,16 @@
   background-color: #f5f6ff;
 }
 
+.editor .sentence:hover .marker {
+  border-bottom: 2px solid rgba(242, 153, 168, 1);
+}
+
 .editor .sentence.active {
   background-color: #f5f6ff;
 }
 
 .editor .marker {
-  border-bottom: 2px solid #f299a8;
+  border-bottom: 2px solid rgba(242, 153, 168, .5);
 }
 
     </style>
