sentence analysis tbc

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,15 +33,15 @@
   background-color: #f5f6ff;
 }
 
-.editor .sentence .marker {
+.editor .sentence .match {
   border-bottom: 2px solid rgba(242, 153, 168, .5);
 }
 
-.editor .sentence:hover .marker {
+.editor .sentence:hover .match {
   border-bottom: 2px solid rgba(242, 153, 168, 1);
 }
 
-.editor .sentence.active .marker {
+.editor .sentence.active .match {
   border-bottom: 2px solid rgba(242, 153, 168, 1);
 }
 
